--- a/style.css
+++ b/style.css
@@ -655,7 +655,7 @@ label,
 .btn,
 a {
     font-family: "helvetica";
-    font-weight: 400;
+    font-weight: bolder;
     color: rgb(57,57,57) !important;
 }
 
@@ -780,12 +780,12 @@ h4 {
 }
 
 .tc-white {
-    color: #ffff !important;
+    color: #fff !important;
 
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #524833;
     color: #FFFFFF!important;
 }
 
@@ -815,9 +815,7 @@ h4 {
     border-color: #364577!important;
 }
 
-.bg-dots-bg {
-    /*! background-image: url("img/dots-bg.png"); */
-}
+
 
 .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
@@ -854,13 +852,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -879,8 +877,8 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -890,8 +888,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
